<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titlebar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    tools:context=".activity.LaunchActivity">


    <ScrollView
        android:layout_below="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <!--录制 -->
            <Button
                android:id="@+id/record_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record" />

            <!--选择 -->
            <Button
                android:id="@+id/select_activity"
                android:text="@string/local_video_beauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/audio_activity"
                android:text="@string/audio_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--视频连接 -->
            <Button
                android:id="@+id/video_connect"
                android:text="@string/video_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/sdk_test"
                android:text="@string/sdk_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>